examples/errors/unknown_function.aaa
fn foo begin
    bar
end


fn
    main
begin
    nop
end
